--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,9 @@ dependencies {
     implementation group: 'org.springframework', name: 'spring-web', version: '5.3.19'
     implementation group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.11.RELEASE'
 
+    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha1'
+
+
 
 }
 
