--- a/build.gradle
+++ b/build.gradle
@@ -20,6 +20,8 @@ dependencies {
     implementation group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.11.RELEASE'
 
     implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha1'
+    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.36'
+
 
 
 
