--- a/build.gradle
+++ b/build.gradle
@@ -12,18 +12,15 @@ repositories {
 }
 
 dependencies {
+
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.2'
 
     implementation group: 'org.springframework.boot', name: 'spring-boot-devtools', version: '2.6.7'
     implementation group: 'org.springframework', name: 'spring-web', version: '5.3.19'
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-web', version: '2.7.0'
+
     implementation group: 'org.thymeleaf', name: 'thymeleaf', version: '3.0.11.RELEASE'
-
-    implementation group: 'org.slf4j', name: 'slf4j-api', version: '2.0.0-alpha1'
-    testImplementation group: 'org.slf4j', name: 'slf4j-simple', version: '1.7.36'
-
-
-
 
 }
 
